fix z-index sidebar

--- a/index.css
+++ b/index.css
@@ -104,7 +104,7 @@ footer{
   left:0;
   width: 260px;
   transform: translateX(0%);
-  z-index:2;
+  z-index:999;
 }
 
 /* repsonsive */
@@ -120,13 +120,13 @@ footer{
     left: 0;
     width: 100%;
     padding-left:0px;
-    z-index:1;
+    z-index:998;
     background-color:rgba(192,192,192,0.3);
 
   }
   .sidebar{
     background-color: #fff;
-    z-index: 2;
+    z-index: 999;
   }
 
   .content {
